bug: bg-attachement on mobile disable

--- a/src/scss/page-layout/_layout.scss
+++ b/src/scss/page-layout/_layout.scss
@@ -103,6 +103,10 @@
   background-position: center;
   filter: blur(1px);
 
+  @media only screen and (hover: none) {
+    background-attachment: initial;
+  }
+
   @media only screen and (min-resolution: 192dpi) and (min-width: 600px),
     only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 600px),
     only screen and (min-width: 1200px) {
